--- a/restapi_konzolos_countrie/restapi_konzolos_countrie.csproj
+++ b/restapi_konzolos_countrie/restapi_konzolos_countrie.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1A5E62EB-39FE-4791-85B2-DDC500D123BF}</ProjectGuid>
+    <ProjectGuid>{EAC90C33-B9DC-4505-A0C1-D8E9CB497359}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HttpClientClass</RootNamespace>
-    <AssemblyName>HttpClientClass</AssemblyName>
+    <RootNamespace>restapi_konzolos_countrie</RootNamespace>
+    <AssemblyName>restapi_konzolos_countrie</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
