--- a/restapi_ZipCodeLookup/restapi_ZipCodeLookup.csproj
+++ b/restapi_ZipCodeLookup/restapi_ZipCodeLookup.csproj
@@ -46,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParseStringConverter.cs" />
+    <Compile Include="Place.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZipCodeData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
