--- a/2024-02-19_retool_restapi/App.config
+++ b/2024-02-19_retool_restapi/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-        <add key="andpointUrl" value="https://retoolapi.dev/zJTHeN/data" />
+        <add key="endpointUrl" value="https://retoolapi.dev/zJTHeN/data" />
     </appSettings>
 </configuration>
